feat(首页): 添加底部导航栏，替换状态栏工具类，调整资源代码

--- a/module_main/src/main/res/values/strings.xml
+++ b/module_main/src/main/res/values/strings.xml
@@ -1,1 +1,5 @@
-<resources></resources>
+<resources>
+    <string name="main_nav_home">首页</string>
+    <string name="main_nav_subscribe_account">订阅号</string>
+    <string name="main_nav_me">个人中心</string>
+</resources>
